Configure fonts for pages Fedes

--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -19,6 +19,7 @@
         overflow: hidden
         font-size: 15px
         font-weight: 200
+        font-family: latoLight
         text-align: justify
         @media (max-width: $mobile-width)
           font-size: 13px
