--- a/content/themes/fedes/page-contactos.hbs
+++ b/content/themes/fedes/page-contactos.hbs
@@ -3,6 +3,7 @@
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
     <div class="mapFedes"></div>
+    {{> "carousel-footer"}}
     <div class="container gallery gallery-principal contactosSection" >
       <div>
         <h2 class="gallery-title">Comunícate con nosotros</h2>
@@ -31,7 +32,7 @@
         </div>
       </div>
       <div class="row colContactos">
-        <div class="col-md-5">
+        <div class="col-md-5 col-xs-9">
           <h6 class="textFormContactos">Use este formulario para enviarnos un mensaje:</h6>
           <form data-toggle="validator" role="form">
             <div class="form-group">
