--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -46,11 +46,13 @@
       h1
         font-size: 3.3vw
         font-weight: bold
+        font-family: HelveticaNeue
         opacity: 1
         color: #fff
       p
         font-size: 1.8vw
         font-weight: 200
+        font-family: latoLight
         opacity: 1
         margin: 0
         color: #fff
@@ -75,11 +77,13 @@
   .textFooter
     color: #FFFFFF
     font-size: 1.8vw
+    font-family: latoLight
     white-space: normal
     text-align: center
     position: relative
     p
       font-size: 19px
+      font-family: latoLight
       margin-bottom: 0
       font-weight: 200
 
@@ -106,11 +110,13 @@
         h1
           margin-top: 5%
           font-size: 30px
+          font-family: HelveticaNeue
           color: #ffffff
           opacity: 1
 
         p
           font-size: 15px
+          font-family: latoLight
           opacity: 1
           box-sizing: content-box // try to fix text cutting in half
 
@@ -145,9 +151,11 @@
       white-space: normal
       text-align: center
       position: relative
+      font-family: latoLight
       p
         font-size: 14px
         margin-bottom: 0
         font-weight: 200
+        font-family: latoLight
         padding-left: 40px
         padding-right: 40px
