--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -14,13 +14,16 @@ footer
 
   a, .textFooter
     color: #FFFFFF
-
+  .textFooter
+    font-family: latoLight
   .textFooter-title
     margin: 0.5em 0 0 0
     font-size: 1.1em
+    font-family: latoLight
 
   .textFooter-content
     font-weight: 200
+    font-family: latoLight
     p
       margin-bottom: 0
 
@@ -59,6 +62,9 @@ footer
     margin: 0.5em 0 3em 0
     text-align: right
     font-size: 0.8em
+    font-family: latoLight
+    a
+      color: $blue-one
 
 @media (max-width: $mobile-width)
   footer
