--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -4,7 +4,7 @@
   .gallery-title
     text-align: center
     color: #003c71
-
+    font-family: latoMedium
   .gallery-element
     display: block
     width: 100%
