--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -10,10 +10,25 @@
 
 .blog-content
   .blog-post-content
-    height: 34em
+    margin-bottom: 30px
   .blog-post-link
     text-decoration: none
     color: #000
+    &-figure
+      .blog-post-link-item
+        position: relative
+      img
+        height: 35vh
+        width: 100%
+        margin: 0 0 15px
+      .blog-post-link-overlay
+        position: absolute
+        top: 0
+        width: 100%
+        height: 100%
+        &:hover
+          background-color: $blue-opacity
+
   .blog-pagination
     .page-box-common
       margin: 0 5px 0 5px
