revise single post view

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -9,6 +9,7 @@
 @import "components/gearDivider-inverse"
 @import "components/servicios"
 @import "components/blog"
+@import "components/post"
 @import "components/header"
 @import "components/footer"
 @import "components/proyectos"
