--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -1,14 +1,4 @@
-.blog-header
-  margin-top: 46px
-  margin-bottom: 50px
-  .carousel-footer-secondary
-    height: 70px
-  @media only screen and (max-width: $mobile-width)
-    margin-top: 10px
-    .carousel-footer-secondary
-      height: 50px
-
-$leftSpace: 15px
+$blogLeftSpace: 15px
 
 .blog-content
   .blog-post-content
@@ -21,7 +11,7 @@ $leftSpace: 15px
       border-left: 1px solid
       border-color: $blue-dark
       .blog-post-link-date
-        margin-left: $leftSpace
+        margin-left: $blogLeftSpace
         color: $blue-dark
         padding-top: 5px
       .blog-post-link-item
@@ -29,7 +19,7 @@ $leftSpace: 15px
       .blog-post-link-title
         font-size: 20px
         font-weight: 500
-        padding: 5px $leftSpace
+        padding: 5px $blogLeftSpace
         width: 95%
         color: $blue-dark
         background-color: $dark-grey
@@ -37,7 +27,7 @@ $leftSpace: 15px
         letter-spacing: -1px
         line-height: 22px
       .blog-post-link-summary
-        margin-left: $leftSpace
+        margin-left: $blogLeftSpace
         margin-right: 20px
         text-align: justify
         line-height: 17px
