--- a/content/themes/fedes/tag.hbs
+++ b/content/themes/fedes/tag.hbs
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row">
       {{#foreach posts}}
-        <div class="col-xs-offset-2 col-xs-8 col-sm-4 blog-post-content">
+        <div class="blog-post-content col-xs-offset-2 col-xs-8 col-sm-4">
           <a href="{{url}}" class="blog-post-link">
             <figure class="blog-post-link-figure">
               <div class="blog-post-link-date">
