--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -1,66 +1,48 @@
 {{!< default}}
 {{#post}}
-  <div class="blog-header">
+  <main id="content" class="content post-container" role="main">
     {{> "carousel-footer"}}
-  </div>
-  <main id="content" class="content blog-content" role="main">
-    <div class="container">
-      <div class="row">
-        <section class="">
-          <div>
-            <ol class="breadcrumb">
-              <li>
-                <a href="/tag/blog/">Blog</a>
-              </li>
-              <li class="active">
-                {{tags from='2' autolink='false'}}
-              </li>
-            </ol>
-          </div>
-        </section>
-      </div>
-      <div class="row">
-        <section>
-          <div class="col-xs-12 col-sm-8">
-            <figure>
-              <div>
-                <h1>{{title}}</h1>
-              </div>
-              <img src="{{image}}"
-                class="img-responsive"
-                alt="{{title}}"/>
-              <div>
-                Por: {{author}}, {{moment-date published_at format="D [de] MMMM, YYYY" locale="es"}}
-              </div>
-              <div>
-                {{content}}
-              </div>
-            </figure>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <div class="col-xs-12">
-              <h2>Categorias</h2>
-              <div>
-                {{> "navigation-blog"}}
-              </div>
-            </div>
-            <div class="col-xs-12">
-              <h2>Otros Posts</h2>
 
-              {{#get "posts" limit="4" include="tags" filter="tag:blog" as |posts|}}
-                {{#foreach posts}}
-                  <div>
-                    <a href="{{url}}">
-                      <div>
-                        {{title}}
-                      </div>
-                    </a>
-                  </div>
-                {{/foreach}}
-              {{/get}}
+    <div class="container">
+      {{> "post-breadcrumbs"}}
+
+      <div class="row">
+        <div class="post-contents col-xs-offset-2 col-xs-8 col-sm-8">
+          <div class="post-contents--header">
+            <h2>{{title}}</h2>
+            <img class="img-responsive"
+              style="background-image: url('{{image}}')"
+            />
+            <div class="post-contents--caption">
+              Por: {{author autolink="false"}}, {{moment-date published_at format="D [de] MMMM [de] YYYY" locale="es"}}
             </div>
           </div>
-        </section>
+          <div class="post-contents--content">{{content}}</div>
+        </div>
+
+        <div class="col-xs-12 col-sm-4">
+          <div class="col-xs-12">
+            <h2>Categorias</h2>
+            <div>
+              {{> "navigation-blog"}}
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <h2>Otros Posts</h2>
+
+            {{#get "posts" limit="4" include="tags" filter="tag:blog" as |posts|}}
+              {{#foreach posts}}
+                <div>
+                  <a href="{{url}}">
+                    <div>
+                      {{title}}
+                    </div>
+                  </a>
+                </div>
+              {{/foreach}}
+            {{/get}}
+          </div>
+        </div>
       </div>
     </div>
   </main>
