share with facebook

--- a/content/themes/fedes/lib/stylesheets/components/post.sass
+++ b/content/themes/fedes/lib/stylesheets/components/post.sass
@@ -34,3 +34,20 @@ $postMarginLeft: 3vw
     text-align: justify
     font-size: 14px
     line-height: 17px
+
+.post-tags-and-share
+  border-top: 1px solid $light-grey
+  border-bottom: 1px solid $light-grey
+  padding-top: 5px
+  padding-bottom: 5px
+  .post-tags
+    padding-left: 0
+    &, a
+      color: $grey
+      text-transform: uppercase
+      &:active, &:hover
+        color: $blue-dark
+  .post-share
+    padding-right: 0
+  .fb-share-button
+    top: -3px
