share with twitter

--- a/content/themes/fedes/lib/stylesheets/components/post.sass
+++ b/content/themes/fedes/lib/stylesheets/components/post.sass
@@ -50,4 +50,5 @@ $postMarginLeft: 3vw
   .post-share
     padding-right: 0
   .fb-share-button
-    top: -3px
+    @media (min-width: $mobile-width)
+      top: -5px
