post categories view

--- a/content/themes/fedes/lib/stylesheets/components/post.sass
+++ b/content/themes/fedes/lib/stylesheets/components/post.sass
@@ -52,3 +52,21 @@ $postMarginLeft: 3vw
   .fb-share-button
     @media (min-width: $mobile-width)
       top: -5px
+
+.post-categories-section
+  padding-left: 0
+  padding-right: 5px
+  h3
+    border-bottom: 1px solid $blue-dark
+    text-transform: uppercase
+    color: $blue-dark
+    letter-spacing: -1px
+    padding-bottom: 5px
+    font-size: 22px
+  .post-categories--tags
+    padding-left: 0
+    padding-right: 0
+    a
+      color: $grey
+      &:hover
+        color: $blue-dark
