--- a/content/themes/fedes/partials/navigation-blog.hbs
+++ b/content/themes/fedes/partials/navigation-blog.hbs
@@ -1,5 +1,5 @@
 <div class="blog-nav">
-  <ul class="nav {{#is "post"}} nav-pills nav-stacked {{else}} nav-tabs {{/is}} nav-justified">
+  <ul class="nav {{#is "post"}} nav-pills nav-stacked {{else}} nav-tabs {{/is}}">
     {{#get "posts" order="created_at asc" filter="tag:blog-category" as |categories|}}
       <li class="blog-main-tab">
         <a href="/tag/blog/">
