--- a/content/themes/fedes/post.hbs
+++ b/content/themes/fedes/post.hbs
@@ -22,7 +22,7 @@
           <div class="post-contents--content">{{content}}</div>
         </div>
 
-        <div class="col-xs-12 post-tags-and-share">
+        <div class="post-tags-and-share col-xs-12">
           <div class="col-xs-offset-2 col-xs-5 post-tags">
             {{tags from="2"}}
           </div>
@@ -32,15 +32,14 @@
           </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4">
-          <div class="col-xs-12">
-            <h2>Categorias</h2>
-            <div>
-              {{> "navigation-blog"}}
-            </div>
+        <div class="post-categories-section col-xs-offset-2 col-xs-10 col-sm-4">
+          <h3>Categorías</h3>
+          <div class="col-xs-10 post-categories--tags">
+            {{> "navigation-blog"}}
           </div>
+
           <div class="col-xs-12">
-            <h2>Otros Posts</h2>
+            <h3>Otros Posts</h3>
 
             {{#get "posts" limit="4" include="tags" filter="tag:blog" as |posts|}}
               {{#foreach posts}}
