other posts view in post

--- a/content/themes/fedes/lib/stylesheets/components/post.sass
+++ b/content/themes/fedes/lib/stylesheets/components/post.sass
@@ -53,7 +53,7 @@ $postMarginLeft: 3vw
     @media (min-width: $mobile-width)
       top: -5px
 
-.post-categories-section
+.post-footer-section
   padding-left: 0
   padding-right: 5px
   h3
@@ -70,3 +70,9 @@ $postMarginLeft: 3vw
       color: $grey
       &:hover
         color: $blue-dark
+  .post-categories--other-posts
+    padding-left: 0
+    padding-right: 0
+    li
+      border-bottom: 1px solid $dark-grey
+      padding-right: 1em
