--- a/content/themes/fedes/tag.hbs
+++ b/content/themes/fedes/tag.hbs
@@ -3,7 +3,7 @@
   {{> "carousel-footer"}}
 
   {{#tag}}
-    <div class="container">
+    <div class="container post-breadcrumbs">
       {{> "navigation-blog"}}
     </div>
   {{/tag}}
