--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -31,7 +31,7 @@ function googleTranslateElementInit() {
     }, 'google_translate_element');
 }
 </script>
-<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   <script type="text/javascript" src="{{asset 'js/vendor/jquery.min.js'}}"></script>
   <script type="text/javascript" src="{{asset 'js/vendor/bootstrap.min.js'}}"></script>
