Blog desktop version

--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -24,6 +24,7 @@
 
   <script type="text/javascript" src="{{asset 'js/vendor/jquery.min.js'}}"></script>
   <script type="text/javascript" src="{{asset 'js/vendor/bootstrap.min.js'}}"></script>
+  <script type="text/javascript" src="{{asset 'js/vendor/jquery.matchHeight.min.js'}}"></script>
   <script type="text/javascript" src="{{asset 'js/application.js'}}"></script>
 
   {{> "footer"}}
