--- a/content/themes/fedes/lib/stylesheets/components/variables.sass
+++ b/content/themes/fedes/lib/stylesheets/components/variables.sass
@@ -21,3 +21,10 @@ $medium-grey: #ebeaed
 $dark-grey: #e0e0e0
 $blacky-grey: #9E9E9E
 $blue-opacity: rgba(0, 60, 113, 0.7)
+
+// Blog page
+$blog-left-space: 15px
+$blog-padding: 10%
+$blog-all-width: 100%
+$blog-circle: 0.6em
+
