--- a/content/themes/fedes/partials/post-breadcrumbs.hbs
+++ b/content/themes/fedes/partials/post-breadcrumbs.hbs
@@ -1,7 +1,7 @@
 <div class="post-breadcrumbs">
   <ol class="breadcrumb">
-    <li>
-      <a href="/tag/blog/">Blog</a>
+    <li class="breadcrumb-parent">
+      <div class="circle-common"></div><a href="/tag/blog/">Blog</a>
     </li>
     <li class="active">
       {{tags from='2' autolink='false'}}
