--- a/content/themes/fedes/partials/navigation-blog.hbs
+++ b/content/themes/fedes/partials/navigation-blog.hbs
@@ -1,11 +1,13 @@
 <div class="blog-nav">
   <ul class="nav {{#is "post"}} nav-pills nav-stacked {{else}} nav-tabs {{/is}}">
     {{#get "posts" order="created_at asc" filter="tag:blog-category" as |categories|}}
-      <li class="blog-main-tab">
-        <a href="/tag/blog/">
-          <div class="circle"></div>Blog
-        </a>
-      </li>
+      {{^is "post"}}
+        <li class="blog-main-tab">
+          <a href="/tag/blog/">
+            <div class="circle"></div>Blog
+          </a>
+        </li>
+      {{/is}}
       {{#foreach categories}}
         {{#if @first}}
           <li class="blog-tab">
