revise carousel for equipo

--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -55,6 +55,8 @@
       padding: 2em
       width: 99%
       height: 100%
+      background-color: $blue-opacity
+      color: $white
       p
         margin: 0 0 0.5em 0
     &:hover
