--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -24,7 +24,7 @@
                     </div>
                   </div>
                 </div>
-              </a>
+              </div>
             </section>
 
             <div class="col-xs-12 collapse service-content" id="service-{{@number}}">
