--- a/content/themes/fedes/partials/carouselEquipo.hbs
+++ b/content/themes/fedes/partials/carouselEquipo.hbs
@@ -1,31 +1,26 @@
-<div class="container">
-  <div class="col-md-12">
+<div class="row">
+  <div class="col-xs-offset-2 col-xs-8">
     <div class="carousel slide" id="myCarouselEquipo">
       <div class="carousel-inner cauroselEquipo">
         {{#get "posts" filter="tag:imagenequipo" as |images|}}
           {{#foreach images}}
             <div class="item">
-              <div class="col-xs-12 col-sm-4 gallery-equipo">
-                <a class="gallery-element" href="{{url}}">
-                  <div class="img-gallery imgEquipo">
-                    <img
-                    class="img-responsive"
-                    {{#if image}}
-                    style="background-image: url('{{image}}')"
-                    {{else}}
-                    style="background-image: url('{{asset 'img/no-image.jpg'}}')"
-                    {{/if}}
-                    / >
-                    <div class="gallery-text-content">
-                      <div class="projectContent">{{content}}</div>
-                    </div>
+              <div class="gallery-element">
+                <div class="img-gallery imgEquipo">
+                  <img class="img-responsive"
+                       {{#if image}}
+                         style="background-image: url('{{image}}')"
+                       {{else}}
+                         style="background-image: url('{{asset 'img/no-image.jpg'}}')"
+                       {{/if}}
+                  / >
+                  <div class="gallery-text-content">{{content}}</div>
+                </div>
+                <div class="gallery-caption-wrapper">
+                  <div class="gallery-caption">
+                    <p>{{title}}</p>
                   </div>
-                  <div class="gallery-caption-wrapper">
-                    <div class="gallery-caption">
-                      <p>{{title}}</p>
-                    </div>
-                  </div>
-                </a>
+                </div>
               </div>
             </div>
           {{/foreach}}
