--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -14,6 +14,7 @@
 @import "components/footer"
 @import "components/proyectos"
 @import "components/gallery"
+@import "components/toggable-content"
 @import "components/navbarFooter"
 @import "components/navbarCarousel"
 @import "components/navbarPricipal"
