--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -8,6 +8,7 @@
       {{> "carouselEquipo"}}
 
       <h2 class="gallery-title">Trabaja con nosotros</h2>
+      {{> "trabaja-con-nosotros"}}
       <div class="row row-services">
         <section>
           <div class="row">
@@ -35,7 +36,6 @@
                       <div class="col-md-6">
                         {{content}}
                       </div>
-                      {{> "formEquipo"}}
                     </div>
                   </div>
                 </div>
