--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -27,9 +27,9 @@
               </div>
             </section>
 
-            <div class="col-xs-12 collapse service-content" id="service-{{@number}}">
+            <div class="col-xs-12 collapse toggable-content" id="service-{{@number}}">
               <div class="top-arrow"></div>
-              <div class="col-xs-10 service-content--content">
+              <div class="col-xs-10 toggable-content--content">
                 {{content}}
               </div>
             </div>
