--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -15,6 +15,9 @@
       text-shadow: none
       font-size: 15px
 
+.register-content
+  strong
+    color: $blue-light
 // .container.gallery-principal
 //   .row-equipo
 //     .img-gallery img
