--- a/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageEquipo.sass
@@ -18,6 +18,25 @@
 .register-content
   strong
     color: $blue-light
+    font-size: 1.2em
+  p
+    margin-bottom: 1em
+
+.form-equipo
+  fieldset
+    color: $turquoise
+    font-size: 1.2em
+    margin-bottom: 1em
+  label
+    font-weight: normal
+  .checkboxes
+    margin-bottom: 2em
+    .checkboxes-label
+      padding-left: 2em
+  .form-advise
+    color: $turquoise
+    text-align: left
+    font-style: italic
 // .container.gallery-principal
 //   .row-equipo
 //     .img-gallery img
