--- a/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
+++ b/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
@@ -6,9 +6,9 @@ $topArrowHeight: 10px
 .toggable-content
   background-color: $light-grey
   margin-top: -8px
-  p
-    text-align: justify
-    color: $grey
+  text-align: justify
+  color: $grey
+  display: inline-block
   .top-arrow
     margin: auto
     margin-top: $topArrowHeight*-1
