--- a/content/themes/fedes/partials/trabaja-con-nosotros.hbs
+++ b/content/themes/fedes/partials/trabaja-con-nosotros.hbs
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div class="clearfix"></div>
-      <div class="row register-content toggable-content">
+      <div class="register-content toggable-content">
         <div class="top-arrow"></div>
         <div class="toggable-content--content col-xs-9">
           <div class="content">
