revise register form
wip

--- a/content/themes/fedes/page-equipo.hbs
+++ b/content/themes/fedes/page-equipo.hbs
@@ -3,12 +3,13 @@
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
     {{> "carousel"}}
-    <div class="container gallery gallery-principal" id="gallery-fedes">
+    <div class="container gallery gallery-principal">
       <h2 class="gallery-title">Conoce al equipo</h2>
       {{> "carouselEquipo"}}
 
       <h2 class="gallery-title">Trabaja con nosotros</h2>
       {{> "trabaja-con-nosotros"}}
+
       <div class="row row-services">
         <section>
           <div class="row">
