Fixed position navbar

--- a/content/themes/fedes/partials/navigationCarousel.hbs
+++ b/content/themes/fedes/partials/navigationCarousel.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default main-navbar col-sm-7 col-sm-offset-5">
+<nav class="navbar navbar-default main-navbar col-md-7 col-md-offset-5 col-sm-7 col-sm-offset-5">
   <div class="container-fluid">
     <div class="navbar-header main-navbar-header">
       <button type="button"
