--- a/content/themes/fedes/partials/menuSuperior.hbs
+++ b/content/themes/fedes/partials/menuSuperior.hbs
@@ -4,7 +4,7 @@
       <img src="{{ @blog.logo }}" class="img-responsive">
     </a>
   </div>
-  <nav class="navbar navbar-default headerNavbar hidden-xs">
+  <nav class="navbar navbar-default headerNavbar hidden-xs col-md-7 col-md-offset-5 col-sm-7 col-sm-offset-5">
 
     <div class ="triangle-topright"></div>
     <div class="container-fluid">
