provide fallback for images on old devices

--- a/content/themes/fedes/lib/stylesheets/components/blog.sass
+++ b/content/themes/fedes/lib/stylesheets/components/blog.sass
@@ -33,6 +33,7 @@ $blogLeftSpace: 15px
         line-height: 17px
         padding-bottom: 25px
       img
+        height: 100px
         height: 20vh
         width: 100%
         background-size: cover
