--- a/content/themes/fedes/lib/stylesheets/components/carousel-secondary.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel-secondary.sass
@@ -1,5 +1,6 @@
 .carousel.carousel-main-secondary .carousel-inner
   .item
+    height: 150px
     height: 30vh
     .menu-carousel
       @media (max-width: $mobile-width)
