--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -14,10 +14,13 @@
 
   .carousel-inner
     .item
+      height: 300px
       height: 60vh
       @media (max-width: $mobile-width) and (orientation: landscape)
+        height: 280px
         height: 90vh
         .carousel.text .content-wrapper
+          max-height: 80px
           max-height: 35vh
       .img-responsive
         height: 100%
