--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -43,6 +43,7 @@
     position: relative
     img
       width: 100%
+      height: 190px
       height: 40vh
     .img-responsive
       background-size: cover
