enhance equipo page on iphone

--- a/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
+++ b/content/themes/fedes/lib/stylesheets/components/toggable-content.sass
@@ -1,5 +1,9 @@
 $topArrowHeight: 10px
 
+.toggable-header
+  &:hover, &:active
+    text-decoration: none
+
 .toggable-content
   background-color: $light-grey
   margin-top: -8px
