--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -41,7 +41,7 @@
 
   .img-gallery
     position: relative
-    img
+    .img-responsive
       width: 100%
       height: 190px
       height: 40vh
