--- a/content/themes/fedes/lib/stylesheets/components/variables.sass
+++ b/content/themes/fedes/lib/stylesheets/components/variables.sass
@@ -18,4 +18,5 @@ $grey: #5b5b5b
 $light-grey: #f2f2f2
 $medium-grey: #ebeaed
 $dark-grey: #e0e0e0
+$blacky-grey: #9E9E9E
 $blue-opacity: rgba(0, 60, 113, 0.7)
