--- a/content/themes/fedes/page-aliados.hbs
+++ b/content/themes/fedes/page-aliados.hbs
@@ -3,33 +3,33 @@
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
     {{> "carousel"}}
-      <div class="container gallery gallery-principal" id="gallery-fedes">
-        {{#get "tags" filter="slug:aliados" as |aliadosTag|}}
-          {{#aliadosTag}}
-            {{> "gallery-title" currentTag=aliadosTag}}
-          {{/aliadosTag}}
-        {{/get}}
-        <div class = "hidden-xs">
-          <div class="row row-services">
-            <section>
-              {{#get "posts" filter="tag:aliadosfedes" as |services|}}
-                {{#foreach services}}
-                  <div class="col-xs-12 col-sm-4">
-                    <figure class="img-gallery-services">
-                      <img src="{{image}}"
-                        class="img-responsive"
-                        alt="{{title}}"/>
-                      <div>
-                        <p>{{title}}</p>
-                      </div>
-                    </figure>
-                  </div>
-                {{/foreach}}
-              {{/get}}
-            </section>
-          </div>
+    <div class="container gallery gallery-principal page-aliados">
+      {{#get "tags" filter="slug:aliados" as |aliadosTag|}}
+        {{#aliadosTag}}
+          {{> "gallery-title" currentTag=aliadosTag}}
+        {{/aliadosTag}}
+      {{/get}}
+      <div class = "hidden-xs">
+        <div class="row row-services">
+          <section>
+            {{#get "posts" filter="tag:aliadosfedes" as |services|}}
+              {{#foreach services}}
+                <div class="col-xs-12 col-sm-4">
+                  <figure class="img-gallery-services">
+                    <img src="{{image}}"
+                      class="img-responsive"
+                      alt="{{title}}"/>
+                    <div>
+                      <p>{{title}}</p>
+                    </div>
+                  </figure>
+                </div>
+              {{/foreach}}
+            {{/get}}
+          </section>
         </div>
-        {{> "carouselAliados"}}
       </div>
+      {{> "carouselAliados"}}
+    </div>
   </main>
 {{/post}}
