--- a/content/themes/fedes/partials/carouselAliados.hbs
+++ b/content/themes/fedes/partials/carouselAliados.hbs
@@ -1,15 +1,15 @@
-<div class="carouselmovil visible-xs">
-  <div class="container">
-    <div id="myCarouselAliados" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner carouselAliados" role="listbox">
+<div class="row visible-xs">
+  <div class="carousel-aliados-wrapper col-xs-offset-2 col-xs-8">
+    <div id="myCarouselAliados" class="carousel slide">
+      <div class="carousel-inner carouselAliados">
         {{#get "posts" filter="tag:aliadosfedes" as |images|}}
           {{#foreach images}}
-          <div class="item">
-            <img src="{{image}}" class="img-responsive">
-            <div>
-              <p>{{title}}</p>
+            <div class="item">
+              <div class="aliado">
+                <div class="img-responsive"
+                     style="background-image: url('{{image}}')"></div>
+              </div>
             </div>
-          </div>
           {{/foreach}}
         {{/get}}
       </div>
