--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -1,12 +1,8 @@
 .mapFedes
   margin-top: 26px
   width: 100%
-  height: 450px
-  @media (max-width: $mobile-width)
-    width: 100%
-  iframe
-    width: 100%
-    height: 450px
+  height: 300px
+  height: 70vh
 .contactosSection
   .colContactos
     padding-left: 97px
