ui for contactos form

--- a/content/themes/fedes/lib/stylesheets/components/forms.sass
+++ b/content/themes/fedes/lib/stylesheets/components/forms.sass
@@ -2,3 +2,9 @@
   border-radius: 0px
 .btn-primary
   border-radius: 0px
+
+.form-with-gray-inputs
+  input, textarea
+    background-color: $light-grey
+    border: 1px solid $medium-grey
+    box-shadow: none
