--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -4,14 +4,8 @@
   height: 300px
   height: 70vh
 .contactosSection
-  .colContactos
-    padding-left: 97px
-    @media (max-width: $mobile-width)
-      padding-left: 0px
-    .textFormContactos
+  font-family: latoLight
+  form
+    fieldset
       color: $turquoise
-      padding-bottom: 20px
-      font-size: 15px
-      font-weight: 200
-      font-family: latoLight
-      width: 320px
+      margin: 1em 0
