--- a/content/themes/fedes/page-contactos.hbs
+++ b/content/themes/fedes/page-contactos.hbs
@@ -1,54 +1,52 @@
 {{!< default}}
 {{#post}}
   {{! The main content area on the homepage }}
-  <main id="content" class="content" role="main">
+  <main id="content" class="content contactosSection" role="main">
     <div class="mapFedes"></div>
     {{> "carousel-footer"}}
-    <div class="container gallery gallery-principal contactosSection" >
-      <div>
-        <h2 class="gallery-title">Comunícate con nosotros</h2>
-      </div>
-      <div class="row colContactos">
-        <div class="col-md-8">
-          {{#get "posts" slug="contenido-de-contactos" as |article|}}
-          {{#article}}
-          {{content}}
-          {{/article}}
-          {{/get}}
-        </div>
-        <div class="col-md-4">
-          <div class="directionText">
-            <ul class="nav nav-pills nav-stacked">
-              {{#get "posts" slug="contactos-direccion" as |article|}}
+
+    <div class="container gallery gallery-principal" >
+      {{#get "tags" filter="slug:ponte-en-contacto" as |contactoTag|}}
+        {{#contactoTag}}
+          {{> "gallery-title" currentTag=contactoTag}}
+        {{/contactoTag}}
+      {{/get}}
+    </div>
+
+    <div class="row">
+      <div class="col-xs-offset-2 col-xs-8">
+        <div class="directionText">
+          <ul class="nav nav-pills nav-stacked">
+            {{#get "posts" slug="contactos-direccion" as |article|}}
               {{> "footer-section" article=article}}
-              {{/get}}
-            </ul>
-            <ul class="nav nav-pills nav-stacked">
-              {{#get "posts" slug="contactos-fono" as |article|}}
+            {{/get}}
+          </ul>
+          <ul class="nav nav-pills nav-stacked">
+            {{#get "posts" slug="contactos-fono" as |article|}}
               {{> "footer-section" article=article}}
-              {{/get}}
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row colContactos">
-        <div class="col-md-5 col-xs-9">
-          <h6 class="textFormContactos">Use este formulario para enviarnos un mensaje:</h6>
-          <form data-toggle="validator" role="form">
-            <div class="form-group">
-              <input type="text" class="form-control" id="nameInput" placeholder="nombre" required>
-            </div>
-            <div class="form-group">
-              <input type="email" class="form-control" id="emailInput" placeholder="e-mail" required>
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" required ></textarea>
-            </div>
-            <div class="help-block with-errors"></div>
-            <button type="submit" class="btn btn-primary">enviar</button>
-          </form>
+            {{/get}}
+          </ul>
         </div>
       </div>
     </div>
- </main>
+
+    <div class="row">
+      <div class="col-xs-offset-2 col-xs-8">
+        <form class="form-with-gray-inputs" data-toggle="validator" role="form">
+          <fieldset>Use este formulario para enviarnos un mensaje:</fieldset>
+          <div class="form-group">
+            <input type="text" class="form-control" id="nameInput" placeholder="nombre" required>
+          </div>
+          <div class="form-group">
+            <input type="email" class="form-control" id="emailInput" placeholder="e-mail" required>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" required ></textarea>
+          </div>
+          <div class="help-block with-errors"></div>
+          <button type="submit" class="btn btn-primary">enviar</button>
+        </form>
+      </div>
+    </div>
+  </main>
 {{/post}}
