footer for contactos page

--- a/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
+++ b/content/themes/fedes/lib/stylesheets/components/pageContactos.sass
@@ -9,3 +9,22 @@
     fieldset
       color: $turquoise
       margin: 1em 0
+
+.redesSociales.actually-on-contacts
+  margin-top: 3em
+  text-align: center
+  .textFooter-title
+    font-size: 20px
+    margin: 1em 0
+  .row
+    margin-top: 1em
+    text-align: center
+    .col-xs-2
+      float: none
+      display: inline-block
+      margin-right: 1em
+
+.logo-fedes-footer
+  text-align: center
+  img
+    margin: 1em auto
