Fixed navbar Principal and navbar Carousel

--- a/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
@@ -1,3 +1,4 @@
+
 .headerNavbar
   border-width: 0px
   background-color: $dark-grey
@@ -10,7 +11,7 @@
   .triangle-topright
     width: 25
     height: 0
-    border-top: 84px solid #e6e6e6
+    border-top: 84px solid $dark-grey
     border-left: 48px solid transparent
     display: inline-block
     overflow: hidden
