--- a/content/themes/fedes/partials/menuSuperior.hbs
+++ b/content/themes/fedes/partials/menuSuperior.hbs
@@ -1,12 +1,18 @@
-<div class="menuSuperior navbar-content ">
-    <nav class="navbar navbar-default headerNavbar hidden-xs ">
-      <div class ="triangle-topright"></div>
-      <div class="container-fluid">
-        <ul class="nav navbar-nav listHeader">
-          <li><a class="navbar-menuItem" href="/">Inicio</a></li>
-          <li><a class="navbar-menuItem" href="/contactos">Contactos</a></li>
-          <li><a class="navbar-menuItem" href="#">English</a></li>
-        </ul>
-      </div>
-    </nav>
-</div>
+<header class="main-header">
+  <div class ="logo">
+    <a class="logo-fedes" href="/">
+      <img src="{{ @blog.logo }}" class="img-responsive">
+    </a>
+  </div>
+  <nav class="navbar navbar-default headerNavbar hidden-xs">
+
+    <div class ="triangle-topright"></div>
+    <div class="container-fluid">
+      <ul class="nav navbar-nav listHeader">
+        <li><a class="navbar-menuItem" href="/">Inicio</a></li>
+        <li><a class="navbar-menuItem" href="/contactos">Contactos</a></li>
+        <li><a class="navbar-menuItem" href="#">English</a></li>
+      </ul>
+    </div>
+  </nav>
+</header>
