--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -19,6 +19,8 @@
       @media (max-width: $mobile-width) and (orientation: landscape)
         height: 280px
         height: 90vh
+      @media (min-width: $tablet-width) and (orientation: landscape)
+        height: 160vh
         .carousel.text .content-wrapper
           max-height: 80px
           max-height: 35vh
@@ -89,6 +91,34 @@
       font-family: latoLight
       margin-bottom: 0
       font-weight: 200
+@media (min-width: $tablet-width)
+  .container.carousel
+    margin-top: 77px
+@media (min-width: $mobile-width)
+  .container.carousel
+    .menu-carousel
+      height: 184px
+      .carousel-controls-wrapper
+        display: block
+        width: 100%
+        height: 20%
+        bottom: 0
+
+        .carousel-control
+          position: absolute
+          display: inline-block
+          height: 40px
+          width: 40px
+          background-image: none
+          border: 2px solid #fff
+          border-radius: 50px
+          margin-top: 61px
+          margin-left: 61px
+          margin-right: 61px
+          vertical-align: top
+          .glyphicon
+            margin-top: -15px
+            margin-left: -14px
 
 @media (max-width: $mobile-width)
   .container.carousel
