--- a/content/themes/fedes/lib/stylesheets/components/header.sass
+++ b/content/themes/fedes/lib/stylesheets/components/header.sass
@@ -1,13 +1,20 @@
 .main-header
   height: 70px
   position: relative
+  @media (min-width: $tablet-width)
+    margin-bottom: 30px
+
   .logo-fedes
     display: block
+    @media (min-width: $tablet-width)
+      position: absolute
     img
       margin-left: 3em
       margin-right: auto
       margin-top: 1em
       width: 20%
+      @media (min-width: $tablet-width)
+        width: 60%
 
       @media screen and (max-width: $mobile-width)
         margin-left: auto
