add font for navbar and carousel

--- a/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarPricipal.sass
@@ -1,4 +1,3 @@
-
 .headerNavbar
   border-width: 0px
   background-color: $dark-grey
@@ -17,3 +16,8 @@
     overflow: hidden
     position: absolute
     right: 100%
+  .container-fluid .listHeader
+    font-family: latoLight
+    float: right
+    margin-top: 20px
+    margin-right: 108px
