--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -20,7 +20,7 @@
         height: 280px
         height: 90vh
       @media (min-width: $tablet-width) and (orientation: landscape)
-        height: 160vh
+        height: 150vh
         .carousel.text .content-wrapper
           max-height: 80px
           max-height: 35vh
@@ -51,13 +51,13 @@
       h1
         font-size: 3.3vw
         font-weight: bold
-        font-family: HelveticaNeue
+        font-family: latoRegular
         opacity: 1
         color: #fff
       p
         font-size: 1.8vw
         font-weight: 200
-        font-family: latoLight
+        font-family: latoRegular
         opacity: 1
         margin: 0
         color: #fff
@@ -88,7 +88,7 @@
     position: relative
     p
       font-size: 19px
-      font-family: latoLight
+      font-family: Yorkville
       margin-bottom: 0
       font-weight: 200
 @media (min-width: $tablet-width)
@@ -143,13 +143,13 @@
         h1
           margin-top: 5%
           font-size: 30px
-          font-family: HelveticaNeue
+          font-family: latoRegular
           color: #ffffff
           opacity: 1
 
         p
           font-size: 15px
-          font-family: latoLight
+          font-family: latoRegular
           opacity: 1
           box-sizing: content-box // try to fix text cutting in half
 
@@ -189,6 +189,6 @@
         font-size: 14px
         margin-bottom: 0
         font-weight: 200
-        font-family: latoLight
+        font-family: Yorkville
         padding-left: 40px
         padding-right: 40px
