--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -19,8 +19,11 @@
       @media (max-width: $mobile-width) and (orientation: landscape)
         height: 280px
         height: 90vh
+      @media (min-width: $tablet-width)
+        height: 50vh
       @media (min-width: $tablet-width) and (orientation: landscape)
-        height: 150vh
+        height: 300px
+        height: 90vh
         .carousel.text .content-wrapper
           max-height: 80px
           max-height: 35vh
@@ -186,7 +189,7 @@
       position: relative
       font-family: latoLight
       p
-        font-size: 14px
+        font-size: 12px
         margin-bottom: 0
         font-weight: 200
         font-family: Yorkville
