Fix proyectos for tablet

--- a/content/themes/fedes/partials/proyectos.hbs
+++ b/content/themes/fedes/partials/proyectos.hbs
@@ -9,7 +9,7 @@
   <div class="row projectList">
     {{#get "posts" limit="3" filter="tag:proyectos"  as |projects|}}
       {{#foreach projects}}
-        <section class="col-xs-offset-2 col-xs-8 col-md-4">
+        <section class="col-xs-offset-2 col-xs-8 col-md-4 col-sm-4">
           <a class="gallery-element" href="{{url}}">
             <div class="img-gallery">
               <img
